--- a/sspwa/public/manifest.json
+++ b/sspwa/public/manifest.json
@@ -1,29 +1,33 @@
 {
   "name": "SSPWA",
   "short_name": "SSPWA",
+  "description": "A progressive web app experience that feels like interacting with a movie.",
+  "background_color": "#0E5FF2",
   "theme_color": "#0E5FF2",
   "icons": [
     {
-      "src": "./img/icons/android-chrome-192x192.png",
+      "src": "./icons/manifest-icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./img/icons/android-chrome-512x512.png",
-      "sizes": "512x512","type":"image/png"
+      "src": "./icons/manifest-icon-512.png",
+      "sizes": "512x512",
+      "type":"image/png"
     },
     {
-      "src": "./img/icons/android-chrome-maskable-192x192.png",
+      "src": "./icons/manifest-icon-192-maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "./img/icons/android-chrome-maskable-512x512.png",
-      "sizes": "512x512","type":"image/png","purpose":"maskable"
+      "src": "./icons/manifest-icon-512-maskable.png",
+      "sizes": "512x512",
+      "type":"image/png",
+      "purpose":"maskable"
     }
   ],
   "start_url": ".",
-  "display": "standalone",
-  "background_color": "#0E5FF2"
+  "display": "standalone"
 }
