--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd cryptocalc && yarn install --immutable --immutable-cache --check-cache && yarn build
+      - run: cd sspwa && yarn install --immutable --immutable-cache --check-cache && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CRYPTOCALC_DAPP }}'
           channelId: live
-          projectId: cryptocalc-dapp
-          entryPoint: "./cryptocalc"
+          projectId: sspwa-v1
+          entryPoint: "./sspwa"
